Fix feature table overflowe

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -562,15 +562,12 @@
 
 }
 
-
-
 gn-features-tables {
   display          : block;
   position         : absolute;
   bottom           : 1em;
   left             : 1em;
   right            : 3.8em;
-  max-height       : 15em;
   background-color : rgba(255,255,255, .6);
   border-radius    : 3px;
   .nav li a {
